--- a/pages/learn/basics/dynamic-routes/polishing-index-page.mdx
+++ b/pages/learn/basics/dynamic-routes/polishing-index-page.mdx
@@ -44,7 +44,7 @@ Then, near the bottom of the `Home` component, replace the `li` tag with the fol
 </li>
 ```
 
-It should now have the links to each article:
+It should now have links to each article:
 
 <Image
   shadow
@@ -55,7 +55,7 @@ It should now have the links to each article:
   height={472 / 2}
 />
 
-> If something is not working, make sure that your code [looks like this](https://github.com/vercel/next-learn-starter/tree/master/api-routes-starter).
+> If something is not working, make sure that your code [looks like this](https://github.com/vercel/next-learn-starter/tree/master/dynamic-routes-starter).
 
 That’s it! Before we wrap up this lesson, let’s talk about some tips for [dynamic routes](/docs/routing/dynamic-routes) on the next page.
 
