--- a/pages/learn/basics/dynamic-routes/polishing-index-page.mdx
+++ b/pages/learn/basics/dynamic-routes/polishing-index-page.mdx
@@ -9,21 +9,17 @@ export const meta = {
   subtitle: 'Polishing the Index Page'
 }
 
-As the final step, let’s update our index page (`pages/index.js`).
-
-In particular, we need to add links to each post page. We’ll be using the [`Link`](/docs/api-reference/next/link) component, but we need to do something differently this time.
-
-To link to a page with dynamic routes, you need to use the [`Link`](/docs/api-reference/next/link) component differently. In our case, to link to `/posts/ssg-ssr`, you need to write it like this:
+First, let’s update our index page (`pages/index.js`).
+We need to add links to each post page using the [`Link`](/docs/api-reference/next/link) component.
 
 ```jsx
-<Link href="/posts/[id]" as="/posts/ssg-ssr">
+<Link href={`/posts/${id}`}>
   <a>...</a>
 </Link>
 ```
 
-As you can see, you need to use `[id]` for `href` and the actual path (`ssg-ssr`) for the `as` prop.
-
-Let’s implement it. First, import [`Link`](/docs/api-reference/next/link) and `Date` in `pages/index.js`:
+`/posts/${id}` will transform into the actual path (`/posts/ssg-ssr`) when compiled. Let's import
+[`Link`](/docs/api-reference/next/link) and `Date` in `pages/index.js`:
 
 ```js
 import Link from 'next/link'
@@ -34,7 +30,7 @@ Then, near the bottom of the `Home` component, replace the `li` tag with the fol
 
 ```jsx
 <li className={utilStyles.listItem} key={id}>
-  <Link href="/posts/[id]" as={`/posts/${id}`}>
+  <Link href={`/posts/${id}`}>
     <a>{title}</a>
   </Link>
   <br />
