Fix typo in learn question answer. (#817)
* Fix typo in learn question answer.

* Apply suggestions from code review

Co-authored-by: Shu Uesugi <shu@chibicode.com>

--- a/pages/learn/basics/data-fetching/pre-rendering.mdx
+++ b/pages/learn/basics/data-fetching/pre-rendering.mdx
@@ -61,9 +61,9 @@ Next, let’s talk about **two forms** of pre-rendering in Next.js.
   answers={[
       'Improved SEO',
       'Allows your application to work without JavaScript',
-      'Allows your appplication to only run server-side'
+      'Allows your application to only run server-side'
     ]}
-  correctAnswer="Allows your appplication to run only client-side"
+  correctAnswer="Allows your application to only run server-side"
 >
 
 **Quick Review**: Which of the following is **not** a benefit of pre-rendering?
